<!--
  ~ Copyright (C) 2019 WordsStore
  ~
  ~ Created by		:	Rahul Kumar
  ~ Last Modified	:	28 Nov 2019 03:06:10 PM
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<resources>

    <string name="app_name">Words Store</string>

    <!-- MainActivity -->
    <string name="main_lbl_title_words">Words</string>
    <string name="main_lbl_title_categories">Categories</string>
    <string name="main_lbl_title_about">About</string>

    <!-- Category Chooser Dialog -->
    <string name="lbl_categories">Categories</string>
    <string name="lbl_filter_by_category">Filter by category</string>
    <string name="lbl_choose_category">Choose Category</string>

    <!-- Save Category Dialog-->
    <string name="hint_category_title">Category Title</string>
    <string name="hint_category_desc">Category Description</string>
    <string name="validation_enter_category_title">Please provide category title!</string>
    <string name="lbl_title_create_category">Create Category</string>
    <string name="lbl_title_update_category">Update Category</string>

    <!-- Save Word Dialog -->
    <string name="hint_word_title">Word Title</string>
    <string name="hint_word_desc">Word Description</string>
    <string name="hint_choose_word_category">Choose word category</string>
    <string name="validation_enter_word_title">Please provide word title!</string>
    <string name="validation_enter_word_desc">Please provide word description!</string>
    <string name="validation_choose_word_category">Please choose word category!</string>
    <string name="lbl_title_create_word">Add Word</string>
    <string name="lbl_title_update_word">Update Word</string>

    <!-- Actions -->
    <string name="lbl_delete_confirm">Confirm Delete</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_next">Next</string>
    <string name="action_skip">Skip</string>
    <string name="action_got_it">Got It</string>

    <!-- Titles -->
    <string name="title_open_source_licenses">Open Source Licenses</string>

    <!-- Splash Screen -->
    <string name="splash_lbl_devs_hub_copyright">Brought to you by\nDevHub Copyright \u00a9 2019</string>

    <!-- Welcome Screen -->
    <string name="welcome_side_one_title">Hi, there..</string>
    <string name="welcome_side_one_desc">Words store is a free form, light-weight and short to the point self vocabulary builder application to beef up your vocabulary.</string>
    <string name="welcome_slide_two_title">Features</string>
    <string name="welcome_slide_two_desc">Packed with easy to use simple features to facilitate our application users to easily note the newly learned words down and to revise and keep them in a categorized manner.</string>
    <string name="welcome_slide_three_title">Ultra-efficient Widget</string>
    <string name="welcome_slide_three_desc">Simply amazing application widget which is a part of your frequent vision in your device enables you to easily memorize the saved words with less effort.</string>
    <string name="welcome_slide_four_title">All the very best to you</string>
    <string name="welcome_slide_four_desc">All the best for your vocabulary building process from our team at DevsHub Co.Ltd. Keep making your vocabulary stronger and richer as it is a fact that vocabularies are the fundamental building blocks for the four skills of any language. We intentionally kept the vocabulary note down process manual in this application so that our users can note down the words descriptions in the way they really understand.</string>

    <!-- About Screen -->
    <string name="about_lbl_open_source_lib">Open source libraries</string>
    <string name="about_lbl_feedback">Feedback</string>
    <string name="about_lbl_visit_devs_hub">Visit DevsHub</string>
    <string name="about_lbl_themes">Themes</string>
    <string name="about_lbl_word_of_day_noti_time">Word of the day Notification Time</string>
    <string name="about_lbl_app_intro">App Intro</string>
    <string name="about_lbl_assets_license">Assets License</string>
    <string name="about_dialog_title_assets_license">App assets license</string>
    <string name="about_dialog_msg_asset_license">All the graphical assets used in this application are adopted from open source websites such as www.flaticon.com and www.iconfinder.com .</string>
    <string name="about_lbl_feedback_subject">Words Store Android App Feedback</string>
    <string name="about_feedback_chooser_title">Send Words Store Feedback</string>
    <string name="about_dialog_title_select_theme">Select Theme</string>
    <string name="about_msg_wod_noti_set">Word of the day notification time has been successfully set to everyday at %s.</string>

    <!-- Messages-->
    <string name="msg_info_save_success">Successfully Saved</string>
    <string name="msg_err_save_failed">Failed to save!</string>
    <string name="msg_info_delete_success">Successfully Deleted</string>
    <string name="msg_err_delete_failed">Failed to delete!</string>
    <string name="msg_empty_category">No word categories.\nPlease add some word categories.</string>
    <string name="msg_empty_words">No words added yet.\nPlease add some words.</string>
    <string name="msg_empty_words_by_category">No words in %s yet.</string>
    <string name="msg_confirm_delete_category">
        <![CDATA[Are you sure to delete category \"<b>%s</b>\"?\nThis action will delete all words those fall under this category and cannot be undone!]]></string>
    <string name="msg_confirm_delete_word">
        <![CDATA[Are you sure to delete word \"<b>%s</b>\"?\nThis action cannot be undone!]]></string>
    <string name="msg_add_words_add_categories">Please add at least one category in order to add word(s).</string>
    <string name="msg_double_back_to_exit">Tap back again to exit.</string>

    <!-- Dummy Text -->
    <string name="textWordDesc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci animi at atque error
        eveniet expedita hic id iste molestias mollitia nam necessitatibus nesciunt numquam officiis perferendis
        quisquam repellendus, rerum voluptas.
    </string>

    <!-- General -->
    <string name="devshub_website">http://devshub-co.hostingerapp.com/</string>
    <string name="btn_dismiss">Dismiss</string>
    <string name="dialog_title_auto_start">Auto Start Permission</string>
    <string name="dialog_msg_auto_start">Please allow Auto Start for WordStore so you will be notified about Word of The Day on time to keep revising your learned vocabularies.\nWordStore is assured to be battery efficient and won\'t be a load on your battery and CPU.</string>
</resources>
