<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 WordsStore
  ~
  ~ Created by		:	Rahul Kumar
  ~ Last Modified	:	28 Nov 2019 03:06:11 PM
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/main_nav_words"
            android:icon="@drawable/ic_nav_words_list_black_24dp"
            android:title="@string/main_lbl_title_words" />

    <item
            android:id="@+id/main_nav_categories"
            android:icon="@drawable/ic_nav_category_black_24dp"
            android:title="@string/main_lbl_title_categories" />

    <item
            android:id="@+id/main_nav_about"
            android:icon="@drawable/ic_nav_about_black_24dp"
            android:title="@string/main_lbl_title_about" />

</menu>