<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_rounded_dialog">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/saveWordDialogTvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/arimo_bold"
                android:text="@string/lbl_title_create_word"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="22sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <View
                android:id="@+id/saveWordDialogTitleDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveWordDialogTvTitle"/>


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saveWordDialogTilTitle"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/hint_category_title"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveWordDialogTitleDivider">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saveWordDialogEdtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:inputType="text"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saveWordDialogTilDesc"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/hint_category_desc"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveWordDialogTilTitle">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saveWordDialogEdtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveWordDialogBtnCategoryChooser"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                android:text="@string/hint_choose_word_category"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_arrow_up_primary_24dp"
                app:iconGravity="start"
                app:strokeColor="@color/colorPrimary"
                app:cornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveWordDialogTilDesc"
                />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveWordDialogBtnSave"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                android:text="@string/action_save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/saveWordDialogBtnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveWordDialogBtnCancel"
                app:layout_constraintTop_toTopOf="@+id/saveWordDialogBtnCancel"/>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveWordDialogBtnCancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                android:text="@string/action_cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveWordDialogBtnSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveWordDialogBtnCategoryChooser"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>