<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2019 WordsStore
  ~
  ~ Created by		:	Rahul Kumar
  ~ Last Modified	:	28 Nov 2019 03:06:11 PM
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rounded_dialog">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/saveCategoryDialogTvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/lbl_title_create_category"
                android:textAlignment="center"
                style="@style/AppTextTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <View
                android:id="@+id/saveCategoryDialogTitleDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveCategoryDialogTvTitle" />


        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saveCategoryDialogTilTitle"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/hint_category_title"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveCategoryDialogTitleDivider">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saveCategoryDialogEdtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:textColor="@color/colorTextPrimary"
                    android:inputType="text"
                    android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saveCategoryDialogTilDesc"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:hint="@string/hint_category_desc"
                app:errorEnabled="true"
                app:counterEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveCategoryDialogTilTitle">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saveCategoryDialogEdtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:gravity="top"
                    android:textColor="@color/colorTextPrimary"
                    android:inputType="textMultiLine"
                    android:minLines="5"
                    android:maxLines="5"
                    android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveCategoryDialogBtnDelete"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                app:backgroundTint="@android:color/holo_red_light"
                android:text="@string/action_delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                android:visibility="gone"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveCategoryDialogTilDesc" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveCategoryDialogBtnSave"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                android:text="@string/action_save"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/saveCategoryDialogBtnCancel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/saveCategoryDialogBtnCancel"
                app:layout_constraintTop_toTopOf="@+id/saveCategoryDialogBtnCancel" />

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveCategoryDialogBtnCancel"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                android:text="@string/action_cancel"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                app:backgroundTint="@android:color/darker_gray"
                app:cornerRadius="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/saveCategoryDialogBtnSave"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/saveCategoryDialogBtnDelete" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>