<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saveWordTilTitle"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/hint_word_title"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saveWordEdtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:inputType="text"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/saveWordTilDesc"
                style="@style/AppTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:hint="@string/hint_word_desc"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveWordTilTitle">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/saveWordEdtDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/arimo"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:minLines="4"
                    android:textSize="14sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
                android:id="@+id/saveWordBtnCategoryChooser"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/arimo"
                android:gravity="center"
                android:text="@string/hint_choose_word_category"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp"
                android:layout_marginTop="16dp"
                app:icon="@drawable/ic_arrow_up_primary_24dp"
                app:iconGravity="start"
                app:strokeColor="@color/colorPrimary"
                app:cornerRadius="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/saveWordTilDesc"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>